[gd_scene load_steps=9 format=2]

[ext_resource path="res://vr/VR.gd" type="Script" id=2]
[ext_resource path="res://addons/godot_ovrmobile/example_scenes/right_hand_model.glb" type="PackedScene" id=4]
[ext_resource path="res://addons/godot_ovrmobile/example_scenes/left_hand_model.glb" type="PackedScene" id=5]


[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )
size = Vector2( 1920, 1080 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Headset/HUD/Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 3 )

[sub_resource type="World" id=5]

[node name="VR" type="ARVROrigin"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.173223, 2, 0 )
script = ExtResource( 2 )

[node name="Headset" type="ARVRCamera" parent="."]
near = 0.01

[node name="HUD" type="MeshInstance" parent="Headset"]
transform = Transform( 0.001, 0, 0, 0, 0.001, 0, 0, 0, 0.001, 0, 0, -0.77 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Viewport" type="Viewport" parent="Headset/HUD"]
size = Vector2( 1920, 1080 )
world = SubResource( 5 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="LeftController" type="ARVRController" parent="."]

[node name="LeftHandModel" parent="LeftController" instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, -3.25841e-07, -1, 0, -1, 3.25841e-07, -1, 5.30863e-14, 1.62921e-07, 0, 0, 0.07 )

[node name="RightController" type="ARVRController" parent="."]
controller_id = 2

[node name="RightHandModel" parent="RightController" instance=ExtResource( 4 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0.07 )
[connection signal="button_pressed" from="LeftController" to="." method="_on_LeftController_button_pressed"]
[connection signal="button_release" from="LeftController" to="." method="_on_LeftController_button_release"]
[connection signal="button_pressed" from="RightController" to="." method="_on_RightController_button_pressed"]
[connection signal="button_release" from="RightController" to="." method="_on_RightController_button_release"]
[connection signal="mesh_updated" from="RightController" to="." method="_on_RightController_mesh_updated"]
